tests/ui/parser/trait-pub-method.rs
trait Foo {
    pub fn foo();
    //~^ ERROR visibility qualifiers are not permitted here
}

fn main() {}
